add linters files

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="body">
-    <h1>Hello Leaderboard!</h1>
+    <h1 class="text-center">Hello Leaderboard!</h1>
 </body>
 
 </html>
